force-app/main/default/objects/Appointments__c/Appointments__c.object-meta.xml
<CustomObject>
    <label>Appointment</label>
    <nameField>
        <displayFormat>app-{000}</displayFormat>
        <label>Appointments  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>