force-app/main/default/objects/Appointments__c/fields/Maintenance_service__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Maintenance service</label>
    <type>Checkbox</type>
</CustomField>