force-app/main/default/objects/Appointments__c/fields/Repairs__c.field-meta.xml
<CustomField>
    <fullName>Repairs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repairs</label>
    <type>Checkbox</type>
</CustomField>