force-app/main/default/objects/Appointments__c/fields/Replacement_Parts__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Parts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Replacement Parts</label>
    <type>Checkbox</type>
</CustomField>