force-app/main/default/objects/Appointments__c/fields/Service_Amount__c.field-meta.xml
<CustomField>
    <fullName>Service_Amount__c</fullName>
    <label>Service Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>