force-app/main/default/objects/Appointments__c/fields/Vehicle_number_plate__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_number_plate__c</fullName>
    <label>Vehicle number plate</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>