force-app/main/default/objects/Appointments__c/validationRules/Vehicle.validationRule-meta.xml
<ValidationRule>
    <fullName>Vehicle</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX( Vehicle_number_plate__c , &quot;[A-Z]{2}[0-9]{2}[A-Z]{2}[0-9]{4}&quot;))</errorConditionFormula>
    <errorDisplayField>Vehicle_number_plate__c</errorDisplayField>
    <errorMessage>Please enter valid number</errorMessage>
</ValidationRule>